deploy-as-code/argocd/install/argocd-server-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: ClusterIP  # Keep as ClusterIP since we'll use ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        command:
        - argocd-server
        - --insecure
        - --basehref
        - /argocd
        - --rootpath
        - /argocd
