deploy-as-code/argocd/install/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - simpletwist.dpdns.org
      secretName: argocd-tls
  rules:
    - host: simpletwist.dpdns.org
      http:
        paths:
        - path: /argocd(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: argocd-server
              port:
                number: 80
